--- a/public/style.css
+++ b/public/style.css
@@ -19,3 +19,20 @@ form div {
   margin: 1em;
   display: inline-block;
 }
+
+.zoom {
+  padding: 50px;
+  /* background-color: green; */
+  transition: transform .2s;
+  /* width: 200px;
+  height: 200px; */
+  /* margin-left: 25% */
+
+}
+
+.zoom:hover {
+  transform: scale(1.5); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+  transform-origin: 10% center;
+  z-index: 9999;
+}
+
