--- a/public/style.css
+++ b/public/style.css
@@ -141,8 +141,10 @@ form div {
 
 .testing {
   background-color: red;
-  animation-name: example;
-  animation-duration: 4s;
+  border-radius: 10px;
+  animation-name: flash;
+  animation: flash 2s infinite;
+  /* animation-duration: 4s; */
 }
 
 @keyframes example {
@@ -152,8 +154,27 @@ form div {
   100% {background-color: green;}
 }
 
+@keyframes flash {
+  0% {
+    filter: brightness(100%);
+    transform: scale(1);
+  }
+  50% {
+    filter: brightness(250%);
+    transform: scale(1.1);
+  }
+  100% {
+    filter: brightness(100%);
+    transform: scale(1);
+  }
+}
+
+.flash-animation {
+  animation: flash 1s infinite;
+}
+
 .yellow {
-  background-color: yellow;
+  background-color: rgb(211, 211, 211);
   border-radius: 10px;
   border: '2px solid #8B8000';
 }
@@ -167,4 +188,4 @@ form div {
 
 
 
-backgroundColor: 'green', borderRadius: '10px', border: '2px solid darkgreen'
+
