--- a/public/style.css
+++ b/public/style.css
@@ -64,11 +64,11 @@ form div {
   justify-content: center;
   align-items: center;
   font-weight: 700;
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   line-height: 1.75rem;
   padding: 0.5rem;
-  border: 1px solid #ebebeb;
-  border-radius: 0.25rem;
+  /* border: 1px solid #ebebeb;
+  border-radius: 0.25rem; */
   text-decoration: none;
   color: #000;
 }
@@ -91,7 +91,7 @@ form div {
 
 .show-counter .countdown > span {
   text-transform: uppercase;
-  font-size: 0.75rem;
+  font-size: .75rem;
   line-height: 1rem;
 }
 
