--- a/public/style.css
+++ b/public/style.css
@@ -215,6 +215,12 @@ form div {
   border-width: 5px;
 }
 
+.add {
+  border-color: darkgray;
+  border-style: solid;
+  border-width: 5px;
+}
+
 
 /* a:link {
   color: #ebebeb;
@@ -223,5 +229,4 @@ form div {
 a:hover {
   color:white;
 }
-
 
