--- a/public/style.css
+++ b/public/style.css
@@ -230,3 +230,15 @@ a:hover {
   color:white;
 }
 
+.auth-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 30vh;
+}
+
+.error-message {
+  color: red;
+  margin-top: 10px;
+}
