--- a/public/style.css
+++ b/public/style.css
@@ -270,11 +270,16 @@ th {
   font-weight: bold;
 }
 
+.results-table th:first-child, .results-table td:first-child {
+  background-color: green; /* or your desired color */
+  /* other styles */
+}
+
 /* Style the first column (exercise names) differently */
-td:first-child {
+/* td:first-child {
   background-color: #f2f2f2;
   font-weight: bold;
-}
+} */
 
 /* Style header cells for days of the week */
 th:not(:first-child) {
