--- a/public/style.css
+++ b/public/style.css
@@ -265,6 +265,12 @@ td {
   border: 1px solid #ddd;
 }
 
+th, td {
+  padding: 15px; /* Adjust this value as needed */
+  text-align: center;
+  border: 1px solid #ddd;
+}
+
 /* th {
   background-color: #f2f2f2;
   font-weight: bold;
