--- a/public/style.css
+++ b/public/style.css
@@ -299,3 +299,55 @@ tr:nth-child(odd) {
 tr:hover {
   background-color: #ddd;
 }
+
+.users-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.profile {
+  width: 100%; /* Full width on small screens */
+  margin-bottom: 15px;
+  margin-top: 25px;
+  display: flex; /* Flex container */
+  flex-direction: column; /* Stack children vertically */
+  align-items: center; /* Align children (including image and text) to the center */
+  justify-content: center; /*
+}
+
+.profile.rounded.text-center.add {
+  text-align: center;
+  /* width: 50%; /* Full width */
+  margin: 0 auto;
+  margin-bottom: 15px;
+  margin-top: 25px;
+}
+
+.profile-image {
+  margin-top: 10px;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin: '10px auto 10px';
+  /* back: `url(${user.image})`, */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-bottom: #000;
+  border-width: 3px;
+}
+
+@media (min-width: 600px) {
+  .profile {
+    width: 50%; /* 2 columns on medium screens */
+  }
+}
+
+@media (min-width: 992px) {
+  .profile {
+    width: 25%; /* 4 columns on large screens */
+  }
+}
