--- a/public/style.css
+++ b/public/style.css
@@ -644,3 +644,20 @@ tr:hover {
     margin-bottom: 10px; /* Space between buttons */
   }
 }
+
+.bottom-bar {
+  position: fixed;
+  margin-top: 20%;
+  bottom: 0;
+  width: 100%;
+  background-color: #333; /* Change as needed */
+  display: flex;
+  justify-content: space-around;
+  padding: 10px 0;
+}
+
+.bottom {
+  color: white; /* Change as needed */
+  text-decoration: none;
+  padding: 10px 20px;
+}
