--- a/public/style.css
+++ b/public/style.css
@@ -647,17 +647,36 @@ tr:hover {
 
 .bottom-bar {
   position: fixed;
-  margin-top: 20%;
+  /* margin-top: 20%; */
   bottom: 0;
   width: 100%;
+  height: 50px;
   background-color: #333; /* Change as needed */
   display: flex;
   justify-content: space-around;
-  padding: 10px 0;
+  padding: 10px 100px;
+  /* margin: 1em; */
 }
+
+
 
 .bottom {
   color: white; /* Change as needed */
   text-decoration: none;
   padding: 10px 20px;
+}
+
+.main-content {
+  padding-bottom: 80px;
+  /* margin: 1em; */
+}
+
+@media screen and (max-width: 600px) {
+  .bottom-bar {
+    height: 50px; /* You might want a smaller bar on mobile */
+  }
+
+  .main-content {
+    padding-bottom: 70px; /* Adjust padding for mobile */
+  }
 }
