updated medals and rank

--- a/public/style.css
+++ b/public/style.css
@@ -680,3 +680,23 @@ tr:hover {
     padding-bottom: 70px; /* Adjust padding for mobile */
   }
 }
+
+/* .modal {
+  position: fixed;
+  z-index: 1000;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 500px; /* Adjust as needed */
+  text-align: center;
+} */
