--- a/public/style.css
+++ b/public/style.css
@@ -651,10 +651,12 @@ tr:hover {
   bottom: 0;
   width: 100%;
   height: 50px;
-  background-color: #333; /* Change as needed */
+  background-color: lightgray; /* Change as needed */
   display: flex;
   justify-content: space-around;
   padding: 10px 100px;
+  border: 4px solid darkgray;
+  /* border-radius: 10px; */
   /* margin: 1em; */
 }
 
