--- a/public/style.css
+++ b/public/style.css
@@ -759,21 +759,22 @@ tr:hover {
 }
 
 .floating-btn {
-  position: absolute;
-  top: 15px;
-  left: 35px;
+  position: fixed; /* Changed to 'fixed' to position relative to the viewport */
+  top: 0px; /* Distance from the top */
+  left: 0px; /* Distance from the left, adjust as needed */
   width: 80px;
   height: 80px;
-  border-radius: 50%;
+  /* border-radius: 50%; */
   background: #f1f1f1;
   cursor: pointer;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1000; /* Ensure it's above other elements */
 }
 .floating-btn img {
-  width: 35px;
-  height: 35px;
+  width: 25px;
+  height: 25px;
 }
 
 nav {
@@ -782,7 +783,13 @@ nav {
   top: 0;
   background: #f1f1f1;
   height: 100vh;
+  width: 50%;
   transition: transform 0.4s ease-in-out;
+  transform: translateX(-100%); /* Hide menu initially */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 nav.active {
@@ -801,7 +808,8 @@ nav a:first-of-type{
 .close-curtain {
   position: absolute;
   top: 10px;
-  right: 10px;
+  left: 50%;
+  /* right: 10px; */
   width: 30px;
   height: 30px;
   cursor: pointer;
@@ -812,5 +820,23 @@ nav a:first-of-type{
 @media screen and (max-width: 900px){
   nav {
       transform: translateX(-100%);
+      z-index: 1000;
   }
+}
+
+.dropdown-menu {
+  display: none; /* Initially, dropdown content is not displayed */
+}
+
+.dropdown-menu.show {
+  display: block; /* When dropdown is active, display the content */
+}
+
+/* .menu-items {
+  margin-top: 100px; /* Adjust as needed to place menu items below the close button */
+
+
+.nav-item {
+  margin-top: 100px;
+  margin-bottom: 15px; /* Adds vertical space between menu items */
 }
