--- a/public/style.css
+++ b/public/style.css
@@ -947,7 +947,7 @@ nav a:first-of-type{
     margin-bottom: 10px;
   }
 
-  .btn-primary {
+  .sub{
     width: 100%;
     margin-bottom: 10px;
   }
