--- a/public/style.css
+++ b/public/style.css
@@ -598,7 +598,7 @@ tr:hover {
   }
 
   .change-photo-button-container {
-    margin-top: 10%;
+    margin-top: 10px;
     margin-bottom: 10%;/* Adjust as needed */
   }
 
