--- a/public/style.css
+++ b/public/style.css
@@ -107,6 +107,16 @@ form div {
   color: white;
 }
 
+@media (max-width: 600px) {
+  .auth-container{
+    margin-top: 40%; /* Increase the top margin */
+    /* other existing styles */
+  }
+}
+
+
+
+
 .Sample header h1 {
   font-size: inherit;
   margin: 0;
